--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>WELCOME</title>
-</head>
-<body>
-<h1> WELCOME TO GRADE 7</h1>
-<h2>Hypertext Markup Language is the standard markup language for documents designed to be displayed in a web browser.</h2>
-<h3>It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets and scripting languages such as JavaScript.</h3>
-<p><b>Hypertext Markup Language</b>Hypertext Markup Language is the standard markup language for documents designed to be displayed in a web browser.<br>
-</body>
+    <head>
+        <title>Independance Day</title>
+    </head>
+    <body style="background-image: url(bg.jpg);background-size: cover;">
+        <center>
+            <h1>Independance Day 2024 Trivia</h1>
+             <img src="MG.jpg" style="
+            border-style: solid;
+            border-color: rgb(156, 103, 156);
+            border-width: 10px;
+            padding: 5px;
+            border-radius: 100%;
+            background-color: rgb(141, 135, 135);
+            ">
+        </center>
+    </body>
 </html>
