--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <title>Independance Day</title>
+        <title>Independence Day</title>
     </head>
-    <body style="background-image: url(bg.jpg);background-size: cover;">
-        <center>
-            <h1>Independance Day 2024 Trivia</h1>
-             <img src="MG.jpg" style="
+    <body style="background-image: url(bg.png);background-size: cover;">
+        <h1 style="text-align: center;">Independence Day 2024 Trivia</h1>
+        <img src="MG.png" style="
             border-style: solid;
             border-color: rgb(156, 103, 156);
-            border-width: 400px;
-            padding: 20px;
-            border-radius: 50%;
+            border-width: 10px;
+            padding: 5px;
+            border-radius: 5%;
             background-color: rgb(141, 135, 135);
-            ">
-        </center>
+            float: left;
+            margin-right: 15px;">
+        <p style="font-size: 36px; line-height: 1.2;">
+            Independence Day is celebrated annually on 15 August as a public holiday in India commemorating the nation's independence from the United Kingdom on 15 August 1947, the day when the provisions of the Indian Independence Act, which transferred legislative sovereignty to the Indian Constituent Assembly, came into effect.
+        </p>
     </body>
 </html>
