--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
         <title>Independence Day</title>
     </head>
-    <body style="background-image: url(bg.png);background-size: cover;">
+    <body style="background-image: url(Project-1/bg.png);background-size: cover;">
         <h1 style="text-align: center;">Independence Day 2024 Trivia</h1>
-        <img src="MG.png" style="
+        <img src="Project-1/MG.png" style="
             border-style: solid;
             border-color: rgb(156, 103, 156);
             border-width: 10px;
